--- a/Custom Campaign UIs/RaxiaV2.5.css
+++ b/Custom Campaign UIs/RaxiaV2.5.css
@@ -1139,6 +1139,10 @@
                 font-family: var(--title-font);
             }
 
+            li.soundscapes-playlist.playing {
+                background: linear-gradient(45deg, var(--active-color), transparent);
+            }
+
             /* Styles for mobile use*/
             @media only screen and (max-width: 790px) {
                 /* Styles for mobile */
